<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeActivity">
    <Button
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/btn_view_profile"
        android:text="@string/view_profile"
        android:textSize="16sp"
        android:layout_margin="50dp"
        android:backgroundTint="@color/purple"
        app:cornerRadius = "20dp"/>
    <LinearLayout
        android:id="@+id/ll_pro_details"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@id/btn_view_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/id"
                android:textSize="12sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="ID001"
                android:id="@+id/tv_user_id"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/email_address"
                android:textSize="12sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="gfgfgfg@ggf"
                android:id="@+id/tv_user_email"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/name"
                android:textSize="12sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="ID001"
                android:id="@+id/tv_user_name"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/date_of_birth"
                android:textSize="12sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="ID001"
                android:id="@+id/tv_user_dob"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/gender"
                android:textSize="12sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="ID001"
                android:id="@+id/tv_user_gender"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/company"
                android:textSize="12sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="ID001"
                android:id="@+id/tv_user_comp"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/position"
                android:textSize="12sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="ID001"
                android:id="@+id/tv_user_position"
                android:textSize="12sp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>