<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"

        tools:context=".MainActivity">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            android:background="@drawable/custom_et">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title"
                    android:id="@+id/loginText"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/purple"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/et_username"
                    android:background="@drawable/custom_et"
                    android:drawablePadding="8dp"
                    android:hint="@string/uname_hint"
                    android:padding="8dp"
                    android:textColor="@color/purple"
                    android:layout_marginTop="40dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/et_password"
                    android:background="@drawable/custom_et"
                    android:drawablePadding="8dp"
                    android:hint="@string/pword_hint"
                    android:padding="8dp"
                    android:inputType="textPassword"
                    android:textColor="@color/purple"
                    android:layout_marginTop="20dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/btn_login"
                    android:text="@string/login_title"
                    android:textSize="16sp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/purple"
                    app:cornerRadius = "20dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>